--- a/src/02-video.html
+++ b/src/02-video.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Video playback</title>
     <link rel="stylesheet" href="css/common.css" />
+    <link type="Image/x-icon" href="./public/favicon.svg" rel="icon" />
   </head>
   <body>
     <p><a href="index.html">Go back</a></p>
