--- a/src/03-feedback.html
+++ b/src/03-feedback.html
@@ -7,6 +7,7 @@
     <title>Feedback form</title>
     <link rel="stylesheet" href="css/common.css" />
     <link rel="stylesheet" href="css/03-feedback.css" />
+    <link type="Image/x-icon" href="./public/favicon.svg" rel="icon" />
   </head>
   <body>
     <p><a href="index.html">Go back</a></p>
